# hinowhat-bot

./: .gitignore  LICENSE  Makefile  README.md  hinowhat-bot.cabal
app/: Main.hs
data/greetings/: en.json  it.json
data/no/: en.json  it.json
data/special/: README.md
src/Bot/: Constants.hs  Discord.hs  Logger.hs  Logic.hs  Persistence.hs  Types.hs
test/Bot/: LogicSpec.hs  PersistenceSpec.hs
