cabal-version:      3.0
name:               hinowhat-bot
version:            0.1.0.0
homepage:           https://github.com/andrefilii/hinowhat-bot.git
license:            MIT
license-file:       LICENSE
author:             Andrea Filippi
category:           Bot
build-type:         Simple


common shared-properties
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    build-depends:    
        base >= 4.14 && < 5,
        text,
        discord-haskell,
        aeson,
        bytestring,
        random,
        cryptonite,
        memory,
        time,
        containers,
        unliftio

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  
        Bot.Logic
        Bot.Types
        Bot.Discord
        Bot.Persistence

executable hinowhat-bot
    import:           shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        hinowhat-bot