cabal-version:      3.0
name:               hinowhat-bot
version:            0.1.0.0
homepage:           https://github.com/andrefilii/hinowhat-bot.git
license:            MIT
license-file:       LICENSE
author:             Andrea Filippi
category:           Bot
build-type:         Simple

common shared-properties
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    
        base >= 4.14 && < 5,
        text,
        discord-haskell,
        aeson,
        bytestring,
        random,
        cryptonite,
        memory,
        time,
        containers,
        unliftio,
        filepath

common runnable-properties
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  
        Bot.Logic
        Bot.Types
        Bot.Discord
        Bot.Persistence
        Bot.Constants

executable hinowhat-bot
    import:           shared-properties, runnable-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        hinowhat-bot

test-suite hinowhat-bot-test
    import:           shared-properties, runnable-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Bot.LogicSpec
    build-tool-depends: hspec-discover:hspec-discover
    build-depends:    
        hspec,
        hinowhat-bot